--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       
-
-    <title>JK</title>
-  </head>
-  <body> 
-  <p> Oia o teste aí?</p>
-  </body>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Segurança no Trabalho</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
+        header { background: #333; color: white; padding: 15px; text-align: center; }
+        nav { text-align: center; margin: 10px 0; }
+        nav a { margin: 0 15px; text-decoration: none; color: #333; font-weight: bold; }
+        section { padding: 20px; text-align: center; }
+        footer { background: #333; color: white; text-align: center; padding: 10px; margin-top: 20px; }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Segurança no Trabalho</h1>
+    </header>
+    <nav>
+        <a href="#home">Início</a>
+        <a href="#servicos">Serviços</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#contato">Contato</a>
+    </nav>
+    <section id="home">
+        <h2>Bem-vindo à Nossa Empresa de Segurança no Trabalho</h2>
+        <p>Oferecemos soluções para um ambiente de trabalho seguro e eficiente.</p>
+    </section>
+    <section id="servicos">
+        <h2>Nossos Serviços</h2>
+        <p>Consultoria em segurança, treinamentos e certificações.</p>
+    </section>
+    <section id="sobre">
+        <h2>Sobre Nós</h2>
+        <p>Somos especialistas em segurança do trabalho com anos de experiência no setor.</p>
+    </section>
+    <section id="contato">
+        <h2>Contato</h2>
+        <p>Email: contato@segurancatrabalho.com</p>
+        <p>Telefone: (11) 1234-5678</p>
+    </section>
+    <footer>
+        <p>&copy; 2025 Segurança no Trabalho. Todos os direitos reservados.</p>
+    </footer>
+</body>
 </html>
